# django-component-utils-poc

./: prompt.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: rug-qa.agent.md  rug-swe.agent.md  rug.agent.md
component_examples/: apps.py  urls.py  views.py  views_data_star.py
component_examples/templates/: show_alerts.html  show_table.html  show_tabs.html  show_toasts.html
config/: settings.py  urls.py
docs/: data_star_docs.md
prompts/: components_summary.md
static/css/components/: alert.css  toast.css
static/js/: datastar.js
static/js/components/: alert.js  tabs.js  toast.js
templates/: base.html  index.html
templates/components/alert/: alert.html
templates/components/table/: table.html  table_body.html  table_new.html
templates/components/tabs/: tabs_horizontal.html  tabs_vertical.html
templates/components/toast/: toast.html
templates/registration/: login.html  signup.html
utils/: string_generator.py
utils/components/: __init__.py  alert.py  table.py  tabs.py  toast.py  validation.py
