[project]
name = "data-star-django-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datastar-py>=0.8.0",
    "django>=6.0.2",
    "lorem-text>=3.0",
    "pandas[excel]==2.3.3",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "psycopg>=3.3.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]


[tool.ruff]
line-length = 80
